<resources>
    <string name="app_name">QuickFitness</string>
    <string name="login_name">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Log In</string>
    <string name="create_account">Create account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="start_routine">Start</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="routine_name_text">Routine name</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="time_icon">Time icon</string>
    <string name="rating">Rating:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="exercise">Exercise Name</string>
    <string name="last_exercise">Last exercise</string>
    <string name="next_exercise">Next exercise</string>
    <string name="pause_exercise">Pause exercise</string>
    <string name="exercise_image">Exercise image</string>
    <string name="routine_name">Routine Name</string>
    <string name="exerciseCounter">3/15</string>
    <string name="chrono">1:00</string>
    <string name="description">Description</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="recent_routines">Recent Routines</string>
    <string name="discover">Discover</string>
    <string name="creator">Creator:</string>
    <string name="name">name</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="logout">Logout</string>
    <string name="difficulty">Difficulty: </string>
    <string name="insert_password">Insert password</string>
    <string name="insert_username">Insert username</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="login_error">Incorrect username or password</string>
    <string name="showpassword">ShowPassword</string>
    <string name="exerciseBreak">Break!</string>
    <string name="email">Email*</string>
    <string name="last_name">Last name*</string>
    <string name="next">Next</string>
    <string name="create_account_title">CREATE ACCOUNT</string>
    <string name="username">Username*</string>
    <string name="password">Password*</string>
    <string name="verify_email">VERIFY EMAIL</string>
    <string name="name_input">Name*</string>
    <string name="code">Code*</string>
    <string name="verify">Verify</string>
    <string name="a_verification_code_was_sent_to">A code was sent to</string>
    <string name="example_email_com">example@email.com</string>
    <string name="routine_times">Times</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>