<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/routine_card"
        android:layout_width="320dp"
        android:layout_height="130dp"
        app:cardBackgroundColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026">

        <Button
            android:id="@+id/start_routine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:text="@string/start_routine" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/teal"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:id="@+id/routine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/routine_name_text"
                android:textColor="#000000"
                android:textSize="23sp" />

            <ImageButton
                android:id="@+id/share"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="end|center"
                android:background="#00FFFFFF"
                android:contentDescription="@string/add_to_favourite"
                android:tint="@color/black"
                app:srcCompat="@drawable/icon_share_black" />

            <ImageButton
                android:id="@+id/empty_fav"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="end|center"
                android:background="#00FFFFFF"
                android:contentDescription="@string/add_to_favourite"
                android:tint="@color/black"
                app:srcCompat="@drawable/icon_fav_black_empty" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/estimated_time"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/rating"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/clock_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/time_icon"
            app:srcCompat="@drawable/icon_time_black"
            app:tint="#000000" />

    </androidx.cardview.widget.CardView>

</LinearLayout>