<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomExerciseAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="392dp"
        android:layout_height="76dp"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="BottomAppBar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/exerciseTopToolBar"
        android:layout_width="394dp"
        android:layout_height="73dp"
        android:background="@color/teal"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/bottomExerciseAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/icon_pause_black"
        app:layout_constraintBottom_toBottomOf="@+id/bottomExerciseAppBar"
        app:layout_constraintEnd_toEndOf="@+id/bottomExerciseAppBar"
        app:layout_constraintStart_toStartOf="@+id/bottomExerciseAppBar"
        app:layout_constraintTop_toTopOf="@+id/bottomExerciseAppBar"
        android:contentDescription="@string/pause_exercise"/>

    <ImageButton
        android:id="@+id/forwardExerciseButton"
        android:layout_width="80dp"
        android:layout_height="76dp"
        android:layout_marginTop="64dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/next_exercise"
        android:src="@drawable/icon_right_arrow_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottomExerciseAppBar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pauseButton"
        app:layout_constraintTop_toTopOf="@+id/bottomExerciseAppBar"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/backExerciseButton"
        android:layout_width="80dp"
        android:layout_height="76dp"
        android:layout_marginTop="52dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/last_exercise"
        android:src="@drawable/icon_left_arrow_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pauseButton"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomExerciseAppBar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/routineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routine_name"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/exerciseTopToolBar"
        app:layout_constraintEnd_toEndOf="@+id/exerciseTopToolBar"
        app:layout_constraintStart_toStartOf="@+id/exerciseTopToolBar"
        app:layout_constraintTop_toTopOf="@+id/exerciseTopToolBar" />

    <TextView
        android:id="@+id/exerciseCounter"
        android:layout_width="42dp"
        android:layout_height="30dp"
        android:text="@string/exerciseCounter"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/exerciseTopToolBar"
        app:layout_constraintEnd_toEndOf="@+id/exerciseTopToolBar"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toEndOf="@+id/routineName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <ImageButton
        android:id="@+id/backToMain"
        android:layout_width="68dp"
        android:layout_height="73dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/icon_left_arrow_black"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/exerciseTopToolBar"
        app:layout_constraintEnd_toStartOf="@+id/routineName"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="@+id/exerciseTopToolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/exit" />

</androidx.constraintlayout.widget.ConstraintLayout>